# hse-ai-analytics

./: .env.example  Dockerfile  README.md  README_EN.md  dash.py  dashboard.py  docker-compose.yml  pyproject.toml
app/: api.py  config.py  dashboard.py  syntetic.py
app/llm/: db_chat.py
app/ml/: forecast.py  risk_score.py
app/utils/: data_loader.py  db.py  init_db.py  models.py
data/: incidents.csv  incidents_upd.csv  korgau.csv
notebooks/: incidents.ipynb  korgau.ipynb
src/: alerts.py  economics.py  eda.py  etl.py  forecasting.py  nlp_analysis.py  recommendations.py  risk_scoring.py
