[project]
name = "hse-ai-analytics"
version = "0.1.0"
description = "An intelligent predictive analytics module for occupational health and safety and industrial safety systems."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "prophet>=1.3.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.3",
    "statsmodels>=0.14.6",
    "streamlit>=1.55.0",
    "uvicorn>=0.41.0",
]
